# azure-ai-explorations

./: .gitignore  README.md  backup.xml
archives/python-ai/: main-aoai.py  main.py  pyproject.toml  readme.md  rest-client.http
archives/python-ai/data/: aml_pip_list.json
archives/python-ai/docs/: chromadb.md  ollama.md
archives/python-ai/flows/: chat_flow1.prompty  chat_flow1_personal.prompty
az/: ai-search-create.sh  ai-search-show-keys.sh  aoai-create.sh  aoai-deploy-models.sh  aoai-quota-usage.sh  aoai-show-keys.sh  app-insights-create.sh  app-insights-show-keys.sh  az-cogsvcs-acct-info.sh  az-cogsvcs-model-list.sh  az-cogsvcs-usage-info.sh  az-help.sh  az-list-regions.sh  cogsvcs-list-kinds-skus.sh  cogsvcs-list-models.sh  cogsvcs-show-accts-info.sh  config.sh  cosmos-create-container.sh  cosmos-create.sh  cosmos-del-def-airports.sh  cosmos-show-container.sh  cosmos-show-keys.sh  env.sh  foundry-create.sh  foundry-show-keys.sh  kv-create.sh  kv-set.sh  kv-show-list-keys.sh  log-analytics-create.sh  log-analytics-show-keys.sh  login.sh  main.py  pyproject.toml  readme.md  requirements.in  requirements.txt  rg-create.sh  rg-show.sh  run_all.sh  show-all.sh  (+6 more)
az/cosmos/: cosmosdb_nosql_libraries_index_policy_diskann.json  vector-embeddings-bak.json  vector-embeddings.json  vector-indexing.json
az/help/: az-cognitiveservices-account-create.txt  az-cognitiveservices-account-list-kinds.txt  az-cognitiveservices-account-list-models.txt  az-cognitiveservices-account-list-skus.txt  az-cognitiveservices-account-list-usage.txt  az-cognitiveservices-account-list.txt  az-cognitiveservices-account-show.txt  az-cognitiveservices-account.txt  az-cognitiveservices-model-list.txt  az-cognitiveservices-model.txt  az-cognitiveservices-usage-list.txt  az-cognitiveservices-usage.txt
az/meta/: azure-env-var-list.txt
data/docs/: SampleDocument.pptx  dire-straits-sultans-of-swing-lyrics.json  docintel-azure-sample-output.txt  simple-sample-doc.docx  simple-sample.json
data/text/: simple-qa.md
docs/: blob_processing.md  mcp.md  psql_commands.md  uv-ruff.md
dotnet-ai/: Program.cs  dotnet-ai.csproj  readme.md
dotnet-ai/App/Core/: Env.cs
dotnet-ai/App/Plugins/: RunningPlugin.cs
dotnet-ai/App/SK/: PromptLogger.cs
dotnet-ai/JoakimSoftware/Core/: Env.cs
dotnet-ai/JoakimSoftware/IO/: FileIO.cs  Paths.cs  ResourceUtil.cs
dotnet-ai/Resources/: joke.yaml
dotnet-cosmos/: Program.cs  dotnet-cosmos.csproj  readme.md  sample_dotenv  setup.sh
dotnet-cosmos/cosmos/: cosmos_diskann_idx_from_portal_ui.json  cosmosdb_nosql_libraries_index1.json  cosmosdb_nosql_libraries_index2.json  cosmosdb_nosql_libraries_index3.json  cosmosdb_nosql_libraries_index4.json
mcp/: readme.md
prompts/: joke.yaml
python-ai/: example-dotenv  main-aoai.py  main-docintel.py  main-hf.py  main-pf.py  main-sk.py  main.py  ollama1.py  pf-cli.sh  pf-ui.sh  pyproject.toml  requirements.in  requirements.txt  venv.sh
python-ai/data/: git-repos-20240223a.json  github_repos.json
python-ai/docs/: azure_ai_foundry_model_fine_tuning.md  lm_studio.md  pypistats.md
python-ai/tests/: test_cosmos.py  test_mongo.py  test_tz.py
python-core/: .evsecrets.json  ai_pipeline.sh  aisearch-airports-recreate.sh  aisearch-pythonlibs-recreate.sh  aisearch-zipcodes-recreate.sh  code-reformat.sh  dotenv-example.txt  main-adls-storage.py  main-aoai.py  main-blob-pipeline.py  main-cosmos-nosql.py  main-docintel.py  main-duckdb.py  main-foundry.py  main-langsvc.py  main-mcp-tools.py  main-merge.py  main-pf.py  main-qa.py  main-search.py  main-sk.py  main-starter.py  main-storage.py  main-swagger.py  pf-ui.sh  pg.ps1  pg.sh  pyproject.toml  readme.md  requirements.in  requirements.txt  search-smoketest.sh  test5.txt  uv-venv.sh  venv.ps1  zip_core_py.xml
python-core/aisearch/: nc_zipcodes_index.json  nosql_airports_index.json  pythonlibs_vector_index.json  searches.json  zipcodes_index.json
python-core/archives/: main-docintel.py
python-core/config/: ai_pipeline_config.json  pipeline_config.json
python-core/cosmos/: cosmosdb_nosql_default_index_policy.json  cosmosdb_nosql_libraries_index_policy_diskann.json
python-core/data/: github_repos_20240223a.json
python-core/docs/: azure-open-ai-pricing-page.html  generaldoc.pdf.json  orig_readme.md  pip-list.txt
python-core/prompts/: gen-aisearch-util.txt  gen-blob-util.txt  gen-foundry-util.txt
python-core/sql/: ai_pipeline.ddl
python-core/src/ai/: ai_foundry_util.py  ai_search_util.py  cogsearch.py  cogsvcs.py  sk_util.py
python-core/src/ai/sk/: lights_plugin.py
python-core/src/db/: cosmos_nosql_util.py  mongo_util.py  pg_util.py  rcache.py  sqlalchemy_models.py
python-core/src/io/: adls_storage_util.py  blob_util.py  fs.py  storage_util.py
python-core/src/os/: env.py  system.py
python-core/src/util/: data_gen.py
python-core/tests/: readme.md  test_bytes.py  test_cosmos.py  test_counter.py  test_doc_filter.py  test_env.py  test_fs.py  test_rcache.py  test_system.py  test_template.py  test_tz.py
python-fastapi/: dotenv-example.txt  main-nosql.py  pyproject.toml  readme.md  requirements.in  requirements.txt  rest-client.http  web-app.ps1  web-app.py  web-app.sh
python-fastapi/src/io/: fs.py
python-fastapi/src/models/: webservice_models.py
python-mcp/: m26-client.py  m26-server.py  pyproject.toml  readme.md  requirements.txt  weather-server.py
python-uv-ruff/: pyproject.toml  readme.md  requirements.txt  uv_tree.txt
python-uv-ruff/examples/: example-pyproject.toml
python-uv-ruff/uv_init/: README.md  generated-pyproject.toml  pyproject.toml
rules-engines/: README.md
rules-engines/dotnet/: readme.md
rules-engines/python/eval_engine/: main.py  pyproject.toml  readme.md  requirements.in  requirements.txt
rules-engines/python/eval_engine/rules/: rules.json  rules_data.json
rules-engines/python/eval_engine/src/ai/: cogsvcs.py
rules-engines/python/eval_engine/src/db/: cosmos_nosql_util.py
rules-engines/python/eval_engine/src/io/: fs.py
rules-engines/python/eval_engine/src/os/: env.py
scripts/: quotelines.sh
(+23 files in other folders)
