[project]
name = "python-core"
version = "0.1.0"
dependencies = [
  "aiohttp",
  "azure-ai-documentintelligence>=1.0.2",
  "azure-ai-projects",
  "azure-cosmos>=4.9.0",
  "azure-identity",
  "azure-storage-blob",
  "black",
  "docopt",
  "duckdb",
  "Faker",
  "httpx",
  "Jinja2",
  "openai",
  "psutil",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.1.1",
  "python-dotenv",
  "pytz",
  "redis"
]
requires-python = ">=3.13"
authors = [
  {name = "Chris Joakim", email = "christopher.joakim@gmail.com"}
]
maintainers = [
  {name = "Chris Joakim", email = "christopher.joakim@gmail.com"}
]
description = "A core set of python code used elsewhere in this repo"
readme = "readme.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["python", "pyproject.toml", "uv", "ruff"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/cjoakim/azure-ai-explorations/"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E722"]
