[project]
name = "python-fastapi"
version = "0.1.0"
dependencies = [
  "aiohttp>=3.10.2",
  "azure-cosmos==4.9.0",
  "six==1.17.0",
  "Faker",
  "Jinja2",
  "azure-identity",
  "black",
  "certifi>=2025.1.31",
  "dnspython",
  "docopt",
  "duckdb",
  "fastapi",
  "h11>=0.14.0",
  "httpx",
  "hypercorn",
  "psutil",
  "pymongo",
  "pytest>= 8.3.5",
  "pytest-asyncio>=0.25.3",
  "pytest-cov>=6.0.0",
  "python-dotenv",
  "pytz",
  "redis",
  "uvicorn"
]
requires-python = ">=3.13"
authors = [
  {name = "Chris Joakim", email = "christopher.joakim@gmail.com"}
]
maintainers = [
  {name = "Chris Joakim", email = "christopher.joakim@gmail.com"}
]
description = "An example web project using fastapi"
readme = "readme.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["python", "pyproject.toml", "uv", "ruff", "fastapi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/cjoakim/azure-ai-explorations/"
